#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.


[package]
name = "eruption-gui"
version = "0.0.11"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A GUI for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption-roccat-vulcan.git"
homepage = "https://github.com/X3n0m0rph59/eruption-roccat-vulcan"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[features]
default = [] #["sourceview"]
sourceview = []

[dependencies]
cfg-if = "1.0.0"
colored = "2.0.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
libc = "0.2.112"
nix = "0.23.1"
rayon = "1.5.1"
walkdir = "2.3.2"
parking_lot = { version = "0.11.2", features = ["deadlock_detection"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
tokio = { version = "1.15.0", features = ["full"] }
#tracing = "0.1.29"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.3.2"
config = "0.11.0"
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
toml = "0.5.8"
byteorder = "1.4.3"
itertools = "0.10.3"
lazy_static = "1.4.0"
palette = "0.6.0"
thiserror = "1.0.30"
eyre = "0.6.5"
color-eyre = "0.6.0"
paste = "1.0.6"
dbus = "0.9.5"
dbus-tokio = "0.7.5"
cairo-rs = "0.15.1"
glib = "0.15.1"
glib-macros = "0.15.1"
gio = "0.15.1"
gdk = "0.15.1"
gdk-pixbuf = "0.15.1"
pango = "0.15.1"
glib-sys = "0.15.1"
gtk-sys = "0.15.1"
gobject-sys = "0.15.1"
gio-sys = "0.15.1"
gdk-sys = "0.15.1"
gtk = { version = "0.15.1", features = ["v3_20"] }
pangocairo = "0.15.1"
# sourceview4 = "0.2"
# sourceview4 = { git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs" }
i18n-embed = { version = "0.13.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.1"
rust-embed = "6.3.0"
unic-langid = "0.9.0"
icecream = "0.1.0"
pretty_assertions = "1.0.0"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["test-util"] }
