#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-gui"
version = "0.1.5"
build = "build.rs"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>", "The Eruption Development Team"]
edition = "2021"
description = "A GUI for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "gui"]
categories = ["hardware-support"]
license = "GPL-3.0"
readme = "README.md"
resolver = "2"

[features]
default = ["sourceview"]
sourceview = ["sourceview4"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
libc = "0.2.135"
nix = "0.25.0"
rayon = "1.5.3"
walkdir = "2.3.2"
parking_lot = { version = "0.12.1", features = ["send_guard", "hardware-lock-elision"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
indexmap = { version = "1.9.1", features = ["serde"] }
# tokio = { version = "1.21.2", features = ["full"] }
# tracing = "0.1.29"
# tracing-futures = "0.2.5"
# tracing-subscriber = "0.3.2"
config = "0.13.2"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
toml = "0.5.9"
byteorder = "1.4.3"
lazy_static = "1.4.0"
palette = "0.6.1"
thiserror = "1.0.37"
eyre = "0.6.8"
color-eyre = "0.6.2"
paste = "1.0.9"
dbus = "0.9.6"
# dbus-tokio = "0.7.5"
cairo-rs = "0.15.12"
glib = "0.15.12"
glib-macros = "0.15.11"
gio = "0.15.12"
gdk = "0.15.4"
gdk-pixbuf = "0.15.11"
pango = "0.15.10"
glib-sys = "0.15.10"
gtk-sys = "0.15.3"
gobject-sys = "0.15.10"
gio-sys = "0.15.10"
gdk-sys = "0.15.1"
gtk = { version = "0.15.5", features = ["v3_20"] }
pangocairo = "0.15.1"
sourceview4 = { version = "0.3.0", optional = true }
# sourceview4 = { git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs" }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.1"
unic-langid = "0.9.0"
icecream = "0.1.0"
pretty_assertions = "1.3.0"

[dev-dependencies]
# tokio = { version = "1.21.2", features = ["test-util"] }
