[package]
name = "eruption-hotplug-helper"
version = "0.0.5"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2018"
description = "A utility used to notify Eruption about device hotplug events"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://github.com/X3n0m0rph59/eruption"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[dependencies]
clap =  { version = "3.0.0-beta.4", features = ["derive"] }
clap_generate = "3.0.0-beta.4"
colored = "2.0.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
libc = "0.2.100"
nix = "0.22.1"
parking_lot = { version = "0.11.1", features = ["deadlock_detection"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.20"
thiserror = "1.0.26"
eyre = "0.6.5"
color-eyre = "0.5.11"
paste = "1.0.5"
lockfile = "0.2.2"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["test-util"] }
