#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-hwutil"
version = "0.0.12"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A CLI control utility for hardware supported by the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://github.com/X3n0m0rph59/eruption"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
crossbeam = "0.8.1"
lazy_static = "1.4.0"
clap =  { version = "3.1.6", features = ["derive"] }
clap_complete = "3.1.1"
ctrlc = { version = "3.2.1", features = ["termination"] }
colored = "2.0.0"
console = "0.15.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
libc = "0.2.121"
nix = "0.23.1"
parking_lot = { version = "0.12.0", features = ["deadlock_detection"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
#tracing = "0.1.26"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.2.20"
config = "0.12.0"
toml = "0.5.8"
thiserror = "1.0.30"
eyre = "0.6.7"
color-eyre = "0.6.1"
bitvec = "1.0.0"
byteorder = "1.4.3"
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", branch = "master" }
hexdump = "0.1.1"
serialport = "4.0.1"
crc8 = "0.1.1"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
unic-langid = "0.9.0"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.2.0"
tokio = { version = "1.17.0", features = ["test-util"] }
