#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-keymap"
version = "0.0.6"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>", "The Eruption Development Team"]
edition = "2021"
description = "A CLI keymap editor for Eruption"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
clap =  { version = "4.0.18", features = ["derive"] }
clap_complete = "4.0.3"
ctrlc = { version = "3.2.3", features = ["termination"] }
colored = "2.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
comfy-table = "6.1.2"
libc = "0.2.137"
nix = "0.25.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
flume = "0.10.14"
thiserror = "1.0.37"
eyre = "0.6.8"
color-eyre = "0.6.2"
chrono = { version = "0.4.22", features = ["serde"] }
# lua-src = "544.0.1"
# mlua = { version = "0.7.3", features = ["lua54", "vendored"] }
# luajit-src = "210.3.2+resty1085a4d"
# mlua = { version = "0.7.3", features = ["luajit52"] }
mlua = { version = "0.8.5", features = ["lua54"] }
regex = "1.6.0"
dbus = "0.9.6"
evdev-rs = "0.6.1"
lazy_static = "1.4.0"
walkdir = "2.3.2"
maplit = "1.0.2"
pest = "2.4.0"
pest_derive = "2.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_json_any_key = "2.0.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.2"
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.21.2", features = ["test-util"] }
