#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-keymap"
version = "0.0.8"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.65"
description = "A CLI keymap editor for Eruption"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []
debug-async = []

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.3.24", features = ["derive"] }
clap_complete = "4.3.2"
ctrlc = { version = "3.4.1", features = ["termination"] }
colored = "2.0.4"
comfy-table = "7.1.0"
libc = "0.2.149"
nix = { version = "0.27.1", features = ["fs"] }
parking_lot = { version = "0.12.1", features = [
  "deadlock_detection",
  "hardware-lock-elision",
] }
tokio = { version = "1.33.0", features = ["full", "tracing", "test-util"] }
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.2.0", features = ["parking_lot"] }
flume = "0.11.0"
thiserror = "1.0.50"
eyre = "0.6.8"
color-eyre = "0.6.2"
chrono = { version = "0.4.31", features = ["serde"] }
mlua = { version = "0.9.1", features = ["luajit52"] }
# luajit-src = "210.5.0"
regex = "1.10.2"
dbus = "0.9.7"
evdev-rs = "0.6.1"
lazy_static = "1.4.0"
walkdir = "2.4.0"
maplit = "1.0.2"
pest = "2.7.5"
pest_derive = "2.7.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_json_any_key = "2.0.0"
i18n-embed = { version = "0.14.1", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.33.0", features = ["full", "tracing", "test-util"] }
