#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-macro"
version = "0.0.5"
authors = [
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
    "The Eruption Development Team",
]
edition = "2021"
description = "A CLI macro utility for Eruption"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.4.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
colored = "2.0.4"
log = "0.4.20"
pretty_env_logger = "0.4.0"
comfy-table = "7.1.0"
libc = "0.2.150"
nix = "0.26.4"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tokio = { version = "1.34.0", features = ["full", "tracing", "test-util"] }
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
flume = "0.11"
thiserror = "1.0.50"
eyre = "0.6.8"
color-eyre = "0.6.2"
hexdump = "0.1.1"
chrono = { version = "0.4.31", features = ["serde"] }
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", branch = "master", default-features = false, features = [
    "linux-static-libusb",
] }
mlua = { version = "0.8", features = ["lua54"] }
regex = "1.10.2"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
udev = "0.8.0"
evdev-rs = "0.6.1"
lazy_static = "1.4.0"
bitvec = "1.0.1"
walkdir = "2.4.0"
maplit = "1.0.2"
pest = "2.7.5"
pest_derive = "2.7.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_json_any_key = "2.0.0"
i18n-embed = { version = "0.13.9", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.34.0", features = ["test-util"] }
