#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-macro"
version = "0.0.7"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "A CLI macro utility for Eruption"
repository = "https://github.com/eruption-project/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = ["evdev-rs", "udev"]
windows = []

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
colored = "2.0.4"
comfy-table = "7.0.1"
libc = "0.2.148"
nix = "0.27.1"
tracing-mutex = { version = "0.3.0", features = ["lock_api"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
console-subscriber = "0.2.0"
flume = "0.11.0"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
hexdump = "0.1.1"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.9.5"
dbus = "0.9.7"
udev = { version = "0.8", optional = true }
evdev-rs = { version = "0.6.1", optional = true }
lazy_static = "1.4.0"
bitvec = "1.0.1"
walkdir = "2.4.0"
maplit = "1.0.2"
pest = "2.7.3"
pest_derive = "2.7.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_json_any_key = "2.0.0"
i18n-embed = { version = "0.14.0", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", rev = "78f273800a7e9fc7f428e45d2cfebaf7b44862c1", default-features = false, features = [
  "linux-native",
] }
# mlua = { version = "0.9.2", features = ["luajit"] }
# lua-src = "546.0.0"
mlua = { version = "0.9.2", features = ["luau", "vendored"] }

[target.'cfg(windows)'.dependencies]
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", rev = "78f273800a7e9fc7f428e45d2cfebaf7b44862c1" }
lua-src = "546.0.1"
mlua = { version = "0.9.2", features = ["luau", "vendored"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
