#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-netfx"
version = "0.1.1"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A Network FX protocol client for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[features]
default = ["backends-all"]
backends-all = ["backend-wayland", "backend-gnome", "backend-x11"]
backends-most = ["backend-wayland", "backend-gnome", "backend-x11"]
backend-wayland = ["wayland-client", "smithay-client-toolkit"]
backend-gnome = ["dbus", "dbus-tokio"]
backend-x11 = ["x11", "x11rb"]

[dependencies]
cfg-if = "1.0.0"
clap =  { version = "3.2.6", features = ["derive"] }
clap_complete = "3.2.2"
colored = "2.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
thread_local = "1.1.4"
dyn-clonable = "0.9.0"
libc = "0.2.126"
memmap2 = "0.5.4"
nix = "0.24.1"
tempfile = "3.3.0"
rayon = "1.5.3"
jwalk = "0.6.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tokio = { version = "1.19.2", features = ["full"] }
#tracing = "0.1.26"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.2.20"
thiserror = "1.0.31"
eyre = "0.6.8"
color-eyre = "0.6.1"
num-traits = "0.2.15"
dbus = { version = "0.9.5", optional = true }
dbus-tokio = { version = "0.7.5", optional = true }
image = "0.24.2"
smithay-client-toolkit = { version = "0.16.0", optional = true }
x11 = { version = "2.19.1", features = ["xlib", "xrandr"], optional = true }
x11rb = { version = "0.10.1", features = ["allow-unsafe-code"], optional = true }
wayland-client = { version = "0.30.0-beta.5", optional = true }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.0"
unic-langid = "0.9.0"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
tokio = { version = "1.19.2", features = ["test-util"] }
