#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-process-monitor"
version = "0.0.16"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A daemon to monitor and introspect system processes and events"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[features]
default = ["sensors-most"]
sensors-most = ["sensor-procmon", "sensor-x11", "sensor-mutter"]
sensors-all = ["sensor-procmon", "sensor-x11", "sensor-wayland", "sensor-mutter"]
sensor-procmon = ["procmon-sys"]
sensor-x11 = ["x11rb"]
sensor-wayland = []
sensor-mutter = []

[dependencies]
cfg-if = "1.0.0"
async-trait = "0.1.57"
byteorder = "1.4.3"
clap =  { version = "3.2.17", features = ["derive"] }
clap_complete = "3.2.4"
ctrlc = { version = "3.2.3", features = ["termination"] }
config = "0.13.2"
dbus = "0.9.6"
dbus-tokio = "0.7.5"
dbus-tree = "0.9.2"
dyn-clone = "1.0.9"
dyn-clonable = "0.9.0"
indexmap = "1.9.1"
log = "0.4.17"
syslog = "6.0.1"
libc = "0.2.132"
nix = "0.25.0"
pretty_env_logger = "0.4.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
#tracing = "0.1.26"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.2.20"
flume = "0.10.14"
toml = "0.5.9"
thiserror = "1.0.32"
eyre = "0.6.8"
color-eyre = "0.6.2"
hotwatch = "0.4.6"
lazy_static = "1.4.0"
walkdir = "2.3.2"
procmon-sys = { version = "0.0.3", path = "src/procmon-sys", optional = true }
x11rb = { version = "0.10.1", optional = true, features = ["allow-unsafe-code"] }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.0"
unic-langid = "0.9.0"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
tokio = { version = "1.20.1", features = ["test-util"] }
